Correct tests to match new implementation